\name{NEWS}
\title{Momocs News}
% Borrowed from the inspiring vegan.
% Cheers to Jari Oksanen and others for the format!

\encoding{UTF-8}

\section{Changes in version 1.2.5 (CRAN + GitHub)}{
  \itemize{
    \item graphics is not dead (aka grindr): pipe-friendly base layers for biplots and shape drawing on cartesian coordinates. Is used to replace all multivariate plotters (eg `plot.PCA`), family pictures (eg `stack`, `panel`) and single shape plotters (eg `ldk_plot`, `coo_plot`). This strategy is faster, much more generic and will ease further development and maintenance compared to previous Momocs graphs.
    \item vignette for `cheapbabi`
    \item ongoing complete review of code
    \item ongoing complete review of manual pages: lots of grouping, more and better examples, default values in `param`s
    \item released `reshape2`, `plyr` dependencies
    \item palettes are now those colorblind-friendly from RColorBrewer and those, state of the art, virids palettes. See also `pal_manual`, `pal_qual_solarized` and `pal_seq_grey`.
    \item `dispatch_fac` is now behind all `fac` arguments
    \item `fgProcrustes` now accepts lists
    \item new functions: `andnow` and `andnow_method` class tells you what to do with this object, and which classes are supported by this function/method.
    \item new `coo_*` methods: `coo_range` and `coo_range_enlarge`
    \item `coo` function ported to methods and now supporting `.Coo` directly: `coo_angle_edges`, `coo_angle_tangent`, `coo_boundingbox`, `coo_calliper`, `coo_chull`, `coo_chull_onion`, `coo_circularity`, `coo_circularityharalick`, `coo_circularity_norm`, `coo_convexity`, `coo_dxy`, `coo_eccentricityboundingbox`, `coo_eccentricityeigen`, `coo_elongation`, `coo_intersect_angle`, `coo_intersect_direction`, `coo_intersect_segment`, `coo_perim`, `coo_perimcum`, `coo_perimpts`, `coo_rectangularity`, `coo_rectilinearity`, `coo_scalex`, `coo_scaley`, `coo_solidity`.