@@ -1,44 +1,25 @@
 
-##### We include magrittr pipes when loading Momocs
-
-#' @export
-dplyr::`%>%`
-
-#' @importFrom magrittr %<>%
-#' @export
-magrittr::`%<>%`
-
-#' @importFrom magrittr %$%
-#' @export
-magrittr::`%$%`
-
-#' @importFrom magrittr %T>%
-#' @export
-magrittr::`%T>%`
-
 ##### Package documentation and NAMESPACE import
 
 #' Momocs
 #'
-#' A complete toolkit for 2D morphometrics,
-#' from data extraction to multivariate
-#' analyses. Most common morphometrics
-#' approaches are included: outlines, curves, landmarks,
-#' "traditional" morphometrics, and facilities for
-#' data preparation, manipulation and
-#' visualization with a consistent grammar
-#' throughout. Momocs allows reproducible and
-#' complex morphometric analyses, other approaches to
-#' be plugged in or developped from those existing, and
-#' paves the way for a pure open-source workflow in R.
+#' The goal of Momocs is to provide a complete, convenient,
+#' reproducible and open-source toolkit for 2D morphometrics.
+#' It includes most common 2D morphometrics approaches on outlines,
+#' open outlines, configurations of landmarks, traditional
+#' morphometrics, and facilities for data preparation,
+#' manipulation and visualization with a consistent grammar throughout.
+#' It allows reproducible, pipeable, complex morphometric analyses
+#' and other morphometrics approaches should be easy to
+#' plug in, or develop from, on top of this canvas.
 #'
 #' To cite Momocs in publications: \code{citation("Momocs")}.
 #'
 #' @seealso
 #' \itemize{
-#'  \item \bold{Homepage}: \url{https://github.com/vbonhomme/Momocs}
-#'  \item \bold{Issues}: \url{https://github.com/vbonhomme/Momocs/issues}
-#'  \item \bold{Tutorial}: \code{browseVignettes("Momocs")}
+#'  \item \bold{Homepage}: \url{https://github.com/MomX/Momocs}
+#'  \item \bold{Issues}: \url{https://github.com/MomX/Momocs/issues}
+#'  \item \bold{Tutorial}: \code{browseVignettes("Momocs")} or \url{http://momx.github.io/Momocs/}
 #'  \item \bold{Email}: \code{bonhomme.vincent@gmail.com} to contribute to dev,
 #'  ask for something, propose collaboration, share your data, etc.
 #' }
@@ -84,6 +65,25 @@ magrittr::`%T>%`
 #' @docType package
 #' @name Momocs
 NULL
+
+
+##### We include magrittr pipes when loading Momocs
+
+#' @export
+dplyr::`%>%`
+
+#' @importFrom magrittr %<>%
+#' @export
+magrittr::`%<>%`
+
+#' @importFrom magrittr %$%
+#' @export
+magrittr::`%$%`
+
+#' @importFrom magrittr %T>%
+#' @export
+magrittr::`%T>%`
+
 
 # prevents "no visible binding for global variable"
 # http://stackoverflow.com/questions/9439256/how-can-i-handle-r-cmd-check-no-visible-binding-for-global-variable-notes-when
